--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 :root{
     --custom-color: #ff4747;
 }
+
+.img{
+    background-image: url('./assets//register.webp');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 5px;
+}
